Adding load more features

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ajax-feed",
-  "version": "1.0.3",
+  "name": "wp-ajax-feed",
+  "version": "1.0.5",
   "description": "",
   "main": "ajax-feed.js",
   "scripts": {
